Fix: Alignment fix for mobile screen

--- a/src/pages/CollectionPage.css
+++ b/src/pages/CollectionPage.css
@@ -164,6 +164,7 @@
 
   .checkboxes {
     flex-direction: column;
+    align-items: center;
   }
 
   .checkbox-wrapper button {
